--- a/PlanT/config/config.yaml
+++ b/PlanT/config/config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - user: gwb301
+  - user: TODO_your_username
   - model: PlanT
 
 exp_folder_name: PlanT2_train
@@ -16,6 +16,7 @@ hydra:
 
 lrDecay_epoch: 29
 
+# Seed is set by environment variable
 # seed: 1234
 debug: False
 visualize: False
@@ -25,15 +26,11 @@ resume_path: ""
 use_caching: True
 custom_sampler: False
 gpus: 2
-# trainset_size: 1
-# benchmark: longest6
 
 expname: DEBUG
 wandb_name: training_PlanT_${hydra:job.override_dirname}
 save_dir: ${hydra:run.dir}
 
-# data_dir: /mnt/lustre/work/geiger/bjaeger25/garage_2_cleanup/results/data/garage_v1_2024_11_07/data # Path to the data directory of the first part of the dataset (ending '_1')
-# data_dir: /home/geiger/krenz73/coding/07_simlingo/simlingo_cleanup/database/simlingo_v2_2025_01_10/data # Path to the data directory of the first part of the dataset (ending '_1')
-# data_dir: /home/geiger/krenz73/coding/07_simlingo/carla_garage/database/plant2_v1_2025_01_12/data
+# NOTE: This is unused currently and replaced by the DS environment variable to allow SLURM local paths
 data_dir: /home/simon/PlanT_2_cleanup/PlanT_2_2025_07_24/data
 
