--- a/PlanT/config/model/RPlanT.yaml
+++ b/PlanT/config/model/RPlanT.yaml
@@ -1,9 +1,7 @@
 name: PlanT
 
-use_mpc_controls : True
-
 waypoints:
-  representation: waypoints
+  representation: path+wps
   generator: linear
   path_len:  20
   wps_len: 8
@@ -13,7 +11,6 @@ waypoints:
   path_weight: 5
   wps_weight: 1
   speed_weight: 1
-  mpc_control_weight : 1.0
 
   gru_hidden_size: 64
 
@@ -22,8 +19,7 @@ training:
   range_factor_front: 2
   input_ego_speed: False
   input_bev: False
-  input_static_cars: False
-  filter_routes: False
+  input_static_cars: True
 
   max_epochs: 30
   batch_size: 128
@@ -35,8 +31,8 @@ training:
   log_path: log/
   num_workers: 16 # for DataLoader
   seq_len: 1
-  augment: True
-  augment_parked: True
+  augment: False
+  augment_parked: False
 
 pre_training:
   forecastLoss_weight: 1
